fixed problem loading wrong J3D on Mac; added -Xmx3G in Mac Info.plist